2006-12-22  Mike Cvet  <mcvet@redhat.com>

	* fcatch.java: Re-Added. Fixes #3733.
	(run): Added console logging options.
	* fcatch.xml: Added.

2006-12-21  Andrew Cagney  <cagney@redhat.com>

	* ftrace.java: Use Config's getVersion, instead of VERSION.
	* fstep.java: Ditto.  Fix typo, program's name is "fstep".

2006-12-20  Nurdin Premji  <npremji@redhat.com>
	
	* ftrace.xml: Made mention of option parsing bug.

2006-12-19  Nurdin Premji  <npremji@redhat.com>

	* fcore.java: Cleaned out unnecessay logging option residue.
	(main): Switched to use a Util.PidParser instead of Parser and 
	Util.parsePids.	
	* fstack.java: Ditto.	

2006-12-18  Nurdin Premji  <npremji@redhat.com>

	* fstack.java: Ran gnu formatter.
	 (main.parser.notifyFile.addFailed): Added, should be defined here, not
	 in ProcBlockAction.

2006-12-18  Mark Wielaard  <mark@klomp.org>

	* fstep.java: New file.
	* fstep.xml: New file.

2006-12-15  Nurdin Premji  <npremji@redhat.com>

	* fcore.java (addOptions): Changed to use frysk.util.Util.addConsoleOptions()
	* fstack.java (addOptions): Ditto.
	* ftrace.java (addOptions): Added logging options using Util.addConsoleOptions

	* fcore.java: Reverted ProcException addition.
	* fstack.java: Ditto.

	* fcore.java (main.procFound): Added try catch for creating CoredumAction.		
	* fstack.java (main.procFound): Ditto. Changed general catch Exception to 
	specific catch NumberFormatException.

2006-12-15  Phil Muldoon  <pmuldoon@redhat.com>

	* fcore.java: (notifyFile): Change error handling to use
	OptionException. Remove tests that are already performed in ProcBlockAction
	Be more consistent in error messages.

2006-12-14  Phil Muldoon  <pmuldoon@redhat.com>

	* fcore.java (addOptions): Add -a and -o options.
	* fcore.xml: Update man-page with above options.

2006-12-14  Nurdin Premji  <npremji@redhat.com>

	* fstack.java (main.notifyFile): Changed to allow stack tracing multiple pids.

2006-12-13  Rick Moseley  <rmoseley@redhat.com>
