@@ -1,3 +1,12 @@
+2006-12-22  Nurdin Premji  <npremji@redhat.com>
+
+	* fcore.java (main): Reflect changes from Util.parsePid and Util.addConsoleOptions.
+	(addOptions): 	Ditto.
+	* fcatch.java (run): Ditto.
+	* ftrace.java (addOptions): Ditto. 
+	* fstack.java (main): Ditto.
+	(addOptions): Ditto.
+	
 2006-12-22  Mike Cvet  <mcvet@redhat.com>
 
 	* fcatch.java: Re-Added. Fixes #3733.
